# OurBot

./: .gitignore  pyproject.toml
src/: bot.py  config.py  send_telegram_api.py
src/archeage/: check_events.py  event_dates.py  mesages.py
systemd/: main.py
